# sportapp-back

./: .env  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
projects/adverse-incidents/: .gitignore  main.py  pyproject.toml  pytest.ini  sonar-project.properties
projects/adverse-incidents-provider/: main.py  pyproject.toml  pytest.ini  sonar-project.properties
projects/adverse-incidents-provider/app/config/: settings.py
projects/adverse-incidents-provider/app/middleware/: api_key_middleware.py
projects/adverse-incidents-provider/app/models/schemas/: schema.py
projects/adverse-incidents-provider/app/routes/: adverse_incidents_provider_routes.py
projects/adverse-incidents-provider/app/services/: adverse_incidents_provider.py
projects/adverse-incidents-provider/app/utils/: faker_utils.py  geo_utils.py
projects/adverse-incidents-provider/tests/integration/: adverse_incidents_provider_test.py  sport_events_test.py
projects/adverse-incidents-provider/tests/unit/routes/: adverse_incidents_provider_routes_test.py
projects/adverse-incidents-provider/tests/unit/services/: adverse_incidents_provider_test.py
projects/adverse-incidents-provider/tests/unit/utils/: faker_utils_test.py  geo_utils_test.py
projects/adverse-incidents/app/aws/: aws.py
projects/adverse-incidents/app/config/: settings.py
projects/adverse-incidents/app/exceptions/: exceptions.py
projects/adverse-incidents/app/models/schemas/: schema.py
projects/adverse-incidents/app/services/: adverse_incidents.py  external.py
projects/adverse-incidents/app/tasks/: processor.py
projects/adverse-incidents/app/utils/: utils.py
projects/adverse-incidents/tests/unit/aws/: aws_test.py
projects/adverse-incidents/tests/unit/services/: adverse_incidents_test.py  external_test.py
projects/adverse-incidents/tests/unit/tasks/: external_test.py  processor_test.py
projects/adverse-incidents/tests/unit/utils/: utils_test.py
projects/adverse-incidents/tests/utils/: processor_test_util.py
projects/alerts/: main.py  pyproject.toml  pytest.ini
projects/alerts/app/aws/: aws.py
projects/alerts/app/config/: settings.py
projects/alerts/app/firebase/: firebase.py
projects/alerts/app/models/: model.py
projects/alerts/app/models/mappers/: data_mapper.py
projects/alerts/app/models/schemas/: schema.py
projects/alerts/app/routes/: alerts_routes.py
projects/alerts/app/services/: alerts.py
projects/alerts/app/tasks/: prioritizer.py  publisher.py
projects/alerts/app/wrapper/: firebase_wrapper.py
projects/alerts/tests/integration/: alerts_test.py
projects/alerts/tests/unit/aws/: aws_test.py
projects/alerts/tests/unit/firebase/: firebase_test.py
projects/alerts/tests/unit/routes/: alerts_routes_test.py
projects/alerts/tests/unit/services/: alerts_test.py
projects/alerts/tests/unit/tasks/: prioritizer_test.py  publisher_test.py
projects/alerts/tests/unit/wrapper/: wrapper_test.py
projects/authorizer/: README.md  example.py  main.py  pyproject.toml  template.yaml  test_main.py
projects/business-partners/: .coveragerc  main.py  pyproject.toml  sonar-project.properties
projects/business-partners/app/aws/: aws_service.py
projects/business-partners/app/config/: settings.py
projects/business-partners/app/exceptions/: exceptions.py
projects/business-partners/app/models/: business_partners.py
projects/business-partners/app/models/mappers/: user_mapper.py
projects/business-partners/app/models/schemas/: schema.py
projects/business-partners/app/routes/: business_partners_routes.py
projects/business-partners/app/security/: jwt.py
projects/business-partners/app/services/: business_partners.py  external.py
projects/business-partners/tests/integration/: business_partners_test.py
projects/business-partners/tests/unit/aws/: aws_service_test.py
projects/business-partners/tests/unit/models/: business_partners_test.py
projects/business-partners/tests/unit/routes/: business_partners_routes_test.py
projects/business-partners/tests/utils/: business_partners_util.py
projects/nutritional-plans/: .coveragerc  Dockerfile  main.py  pyproject.toml  pytest.ini  sonar-project.properties
projects/nutritional-plans/app/config/: settings.py
projects/nutritional-plans/app/models/: model.py
projects/nutritional-plans/app/routes/: nutritional_plans_routes.py
projects/nutritional-plans/app/services/: external.py  nutritional_plans.py
projects/nutritional-plans/app/utils/: utils.py
projects/nutritional-plans/migrations/: env.py
projects/nutritional-plans/migrations/versions/: 787f74ab4a33_create_dishes.py
projects/nutritional-plans/tests/integration/: nutritional_plans_test.py
projects/nutritional-plans/tests/utils/: nutritional_plans_util.py
projects/sport-events/: main.py  pyproject.toml  sonar-project.properties
projects/sport-events/app/config/: settings.py
projects/sport-events/app/middleware/: api_key_middleware.py
projects/sport-events/app/models/: model.py
projects/sport-events/app/routes/: sport_events_routes.py
projects/sport-events/app/services/: sport_events.py
projects/sport-events/tests/integration/: sport_events_test.py
projects/sport-events/tests/utils/: sport_events_util.py
projects/users/: .coveragerc  Dockerfile  ecs-container-definition.json  main.py  pyproject.toml  pytest.ini
projects/users/app/: main.py
projects/users/app/config/: db.py  settings.py
projects/users/app/exceptions/: exceptions.py
projects/users/app/jwt/: generator.py
projects/users/app/models/: business_partners.py  users.py
projects/users/app/routes/: business_partners_routes.py  users_routes.py
projects/users/app/security/: jwt.py  passwords.py
projects/users/app/services/: business_partners.py  external.py  users.py
projects/users/app/tasks/: sync_db.py
projects/users/app/utils/: user_cache.py  utils.py
projects/users/migrations/versions/: 2544812b6ab7_create_trainers.py
projects/users/tests/integration/: business_partners_test.py  users_test.py
projects/users/tests/utils/: users_util.py
(+258 files in other folders)
