[tool.poetry]
name = "sport-sessions"
version = "0.1.0"
description = ""
authors = ["Misoteam"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
faker = "^25.3.0"
numpy = "^1.26.4"
shapely = "^2.0.4"

[tool.poetry.group.test.dependencies]
pytest = "^8.2.0"
coverage = "^7.5.1"
httpx = "^0.27.0"
pytest-asyncio = "^0.23.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
