[tool.poetry]
name = "business-partners"
version = "0.1.0"
description = ""
authors = ["Miso Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
SQLAlchemy = "^2.0.29"
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
pydantic = "^2.7.1"
bcrypt = "^4.1.2"
httpx = "^0.27.0"
boto3 = "^1.34.116"
uvicorn = "^0.29.0"
pillow = "^10.3.0"
python-dotenv = "^1.0.1"
pyhumps = "^3.8.0"
requests = "^2.31.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.2.0"
faker = "^25.2.0"
coverage = "^7.5.1"
psycopg2-binary = "^2.9.9"
pytest-mock = "^3.14.0"
pytest-dotenv = "^0.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
