[tool.poetry]
name = "sport-sessions"
version = "0.1.0"
description = ""
authors = ["Misoteam"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
sqlalchemy = "^2.0.30"
psycopg2-binary = "^2.9.9"
boto3 = "^1.34.115"
requests = "^2.31.0"
alembic = "^1.13.1"

[tool.poetry.group.test.dependencies]
pytest = "^8.2.0"
faker = "^25.2.0"
coverage = "^7.5.1"
httpx = "^0.27.0"
pytest-asyncio = "^0.23.6"
pytest-dotenv = "^0.5.2"
pytest-mock = "^3.14.0"
mock = "^5.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
